# CHIP-8

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml  cmake.yml
include/: chip8.h  chip8_display.h  chip8_keyboard.h  chip8_memory.h  chip8_registers.h  chip8_stack.h  config.h
src/: chip8.c  chip8_display.c  chip8_keyboard.c  chip8_memory.c  chip8_stack.c  main.c
